[gd_scene load_steps=7 format=2]

[ext_resource path="res://resources/Loons_boss/loon_calling.png" type="Texture" id=1]
[ext_resource path="res://Fire_notification.tscn" type="PackedScene" id=2]
[ext_resource path="res://Stage_1.gd" type="Script" id=3]
[ext_resource path="res://resources/Loons_boss/end_stage_0.mp3" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, -20 ), Vector2( 0, -10 ), Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, 20 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Stage_1" type="Area2D" groups=["boss_area"]]
scale = Vector2( 0.866417, 1.01409 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="2Stage" type="Sprite" parent="."]
position = Vector2( 31.1628, 18.736 )
scale = Vector2( 0.132203, 0.132203 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -20.7752, -2.95832, -8.07925, -3.94442, -3.46254, -6.90274, 0, -8.87495, 5.77089, -9.86106, 11.5418, -8.87495, 13.8501, -7.88885, 17.3127, -4.93053, 19.621, 0, 20.7752, 4.93053, 20.7752, 19.7221, 18.4669, 28.5971, 19.621, 27.611, 25.3919, 25.6388, 38.0879, 23.6665, 48.4755, 23.6665, 65.7882, 26.6249, 83.1009, 34.5137, 84.255, 37.472, 81.9467, 40.4303, 72.7133, 44.3748, 66.9424, 45.3609, 40.3963, 47.3331, 28.8545, 47.3331, 23.0836, 44.3748, 13.8501, 39.4442, 19.621, 32.5415, 17.3127, 28.5971, 9.23343, 28.5971, 3.46254, 23.6665, 5.77089, 7.88885, 2.30836, 6.90274, -1.15418, 7.88885, -10.3876, 4.93053, -12.696, 3.94442, -18.4669, 4.93053, -20.7752, 3.94442, -6.92507, 0, -5.77089, -0.986106, -21.9294, -1.97221 )

[node name="Shield" type="Area2D" parent="." groups=["boss_area"]]

[node name="Shield" type="CollisionPolygon2D" parent="Shield"]
polygon = PoolVector2Array( 3.46254, 23.6665, 5.77089, 25.6388, 8.07925, 28.5971, 17.3127, 28.5971, 19.621, 32.5415, 13.8501, 39.4442, 20.7752, 43.3887, 28.8545, 47.3331, 17.3127, 46.347, 4.61671, 45.3609, 1.15418, 44.3748, 0, 43.3887, -1.15418, 40.4303, -2.30836, 37.472, -2.30836, 34.5137, -2.30836, 33.5276, -1.15418, 31.5554, -1.15418, 30.5693, 0, 28.5971, 1.15418, 26.6249, 2.30836, 24.6526 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="Next_decision" type="Timer" parent="."]
one_shot = true

[node name="enemy_spew_timer" type="Timer" parent="."]
one_shot = true

[node name="Check_Fire" parent="." instance=ExtResource( 2 )]
position = Vector2( -12.6972, 0.0145928 )
rotation = -0.0872665

[node name="wait_for_right_spot" type="Timer" parent="."]
one_shot = true

[node name="prepare_for_rage_mode" type="Timer" parent="."]
one_shot = true

[node name="rage_mode_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="stop_rage_mode_sound" type="Timer" parent="."]
one_shot = true

[node name="Timer_for_ultra_rage" type="Timer" parent="."]
one_shot = true

[node name="timer_before_gael2" type="Timer" parent="."]
one_shot = true

[node name="timer_gael2" type="Timer" parent="."]
one_shot = true

[node name="entry_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="continuous_explosion" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Stage_1_body_entered"]
[connection signal="body_entered" from="Shield" to="." method="_on_Shield_body_entered"]
[connection signal="timeout" from="Next_decision" to="." method="_on_Next_decision_timeout"]
[connection signal="timeout" from="enemy_spew_timer" to="." method="_on_enemy_spew_timer_timeout"]
[connection signal="timeout" from="wait_for_right_spot" to="." method="_on_wait_for_right_spot_timeout"]
[connection signal="timeout" from="prepare_for_rage_mode" to="." method="_on_prepare_for_rage_mode_timeout"]
[connection signal="timeout" from="stop_rage_mode_sound" to="." method="_on_stop_rage_mode_sound_timeout"]
[connection signal="timeout" from="Timer_for_ultra_rage" to="." method="_on_Timer_for_ultra_rage_timeout"]
[connection signal="timeout" from="timer_before_gael2" to="." method="_on_timer_before_gael2_timeout"]
[connection signal="timeout" from="timer_gael2" to="." method="_on_timer_gael2_timeout"]
[connection signal="timeout" from="entry_timer" to="." method="_on_entry_timer_timeout"]
[connection signal="timeout" from="continuous_explosion" to="." method="_on_continuous_explosion_timeout"]
